--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="login-container">
+    <h1>Hello from $(hostname -f)</h1>
         <h1>Login</h1>
         <form action="login.php" method="post">
             <label for="username">Username:</label>
