--- a/Register.html
+++ b/Register.html
@@ -10,6 +10,7 @@
     <div style="background-color: #fff; padding: 20px; border-radius: 10px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); max-width: 400px; width: 100%; text-align: center;">
 
         <h1 style="margin-bottom: 20px; color: #333;">Registration</h1>
+        <h1>Hello from $(hostname -f)</h1>
 
         <form action="register.php" method="post" style="text-align: left;">
             <label for="username" style="display: block; margin-bottom: 5px;">Username:</label>
